# netlink-ddns

./: .gitignore  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  README.md
.github/workflows/: release-binaries.yml  release-plz.yml  unit-tests.yml
examples/: config.corn
src/: config.rs  ddns.rs  http.rs  main.rs  netlink.rs
src/gandi/: mod.rs  types.rs
src/netlink/: mod.rs
src/systemd/: linux.rs  mod.rs  network1.rs
systemd/: netlink-ddns.service
tests/: config.toml
