[package]
name = "netlink-ddns"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
futures = { version = "0.3.31", default-features = false }
libcorn = "0.10.0"
netlink-sys = { version = "0.8.7", features = ["smol_socket"] }
once_cell = "1.21.3"
pico-args = "0.5.0"
rtnetlink = { version = "0.18.1", default-features = false, features = ["smol_socket"] }
serde = { version = "1.0.228", features = ["derive"] }
smol = "2.0.2"
tracing = "0.1.41"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
zone-update = { version = "0.5.2", features = ["async"] }

[dev-dependencies]
macro_rules_attribute = "0.2.2"
smol-macros = "0.1.1"
temp-env = { version = "0.3.6", features = ["async_closure"] }
test-log = "0.2.18"
tracing-test = "0.2.5"
