[package]
name = "netlink-ddns"
version = "0.1.9"
description = "A minimal DDNS server that publishes IP changes to DNS."
license = "GPL-3.0-only"
repository = "https://github.com/tarka/netlink-ddns"
edition = "2024"
rust-version = "1.88.0"

[dependencies]
anyhow = "1.0.100"
async-fs = "2.2.0"
compio = { version = "0.17.0", features = ["io", "macros", "time"] }
futures = { version = "0.3.31", default-features = false }
libcorn = "0.10.0"
netlink-sys = { version = "0.8.7", features = ["smol_socket"] }
once_cell = "1.21.3"
pico-args = "0.5.0"
rtnetlink = { version = "0.20.0", default-features = false, features = ["smol_socket"] }
serde = { version = "1.0.228", features = ["derive"] }
tracing = "0.1.44"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
zone-update = { version = "0.9.3", features = ["async"] }

[dev-dependencies]
macro_rules_attribute = "0.2.2"
temp-env = { version = "0.3.6", features = ["async_closure"] }
test-log = "0.2.19"
tracing-test = "0.2.5"

[package.metadata.binstall]
bin-dir = "{ name }-v{ version }-{ target }/bin/{ bin }{ binary-ext }"
